website/versioned_docs/version-0.0.4/api/cloud/cloud.http.md
---
id: version-0.0.4-cloud.http
title: http namespace
hide_title: true
original_id: cloud.http
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Cloud API Overview](overview) &gt; [@adpt/cloud](./cloud.md) &gt; [http](./cloud.http.md)

## http namespace

<b>Signature:</b>

```typescript
export * from "./files";
export * from "./HttpServer";
export * from "./http_server_types";
export * from "./UrlRouter";
//# sourceMappingURL=index.d.ts.map
```

## Classes

|  Class | Description |
|  --- | --- |
|  [default](./cloud.http.default.md) |  |
|  [HttpServer](./cloud.http.httpserver.md) |  |
|  [UrlRouter](./cloud.http.urlrouter.md) |  |

## Functions

|  Function | Description |
|  --- | --- |
|  [checkUrlEndpoints(routes)](./cloud.http.checkurlendpoints.md) |  |
|  [isFilesResolved(f)](./cloud.http.isfilesresolved.md) |  |
|  [useFilesInfo(files)](./cloud.http.usefilesinfo.md) |  |
|  [useResolvedFiles(files)](./cloud.http.useresolvedfiles.md) |  |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [DestFiles](./cloud.http.destfiles.md) |  |
|  [FilesImageHandle](./cloud.http.filesimagehandle.md) |  |
|  [FilesImageResolved](./cloud.http.filesimageresolved.md) |  |
|  [FilesInfo](./cloud.http.filesinfo.md) |  |
|  [FilesLocal](./cloud.http.fileslocal.md) |  |
|  [HttpServerProps](./cloud.http.httpserverprops.md) |  |
|  [Location](./cloud.http.location.md) |  |
|  [MatchPath](./cloud.http.matchpath.md) |  |
|  [MatchRegex](./cloud.http.matchregex.md) |  |
|  [PathPair](./cloud.http.pathpair.md) |  |
|  [ResolvedRoute](./cloud.http.resolvedroute.md) |  |
|  [UrlRouterProps](./cloud.http.urlrouterprops.md) |  |
|  [UrlRouterRoute](./cloud.http.urlrouterroute.md) |  |
|  [VirtualServer](./cloud.http.virtualserver.md) |  |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [Destination](./cloud.http.destination.md) |  |
|  [Files](./cloud.http.files.md) |  |
|  [FilesResolved](./cloud.http.filesresolved.md) |  |
|  [Match](./cloud.http.match.md) |  |
