website/versioned_docs/version-0.1.0/api/cloud/cloud.http.md
---
id: "version-0.1.0-cloud.http"
title: "http namespace"
hide_title: true
original_id: "cloud.http"
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Cloud API Overview](overview) &gt; [@adpt/cloud](./cloud.md) &gt; [http](./cloud.http.md)

## http namespace

Adapt components for HTTP

## Classes

|  Class | Description |
|  --- | --- |
|  [default](./cloud.http.default.md) | Abstract component for URL routing |
|  [HttpServer](./cloud.http.httpserver.md) | Abstract component that represents an HTTP server |
|  [UrlRouter](./cloud.http.urlrouter.md) | Abstract component for URL routing |

## Functions

|  Function | Description |
|  --- | --- |
|  [checkUrlEndpoints(routes)](./cloud.http.checkurlendpoints.md) | Function to check if the routes prop for [UrlRouter](./cloud.http.urlrouter.md) components is valid |
|  [fileHandles(files)](./cloud.http.filehandles.md) | Returns all <code>Handle</code>s referenced by the set of <code>files</code>. |
|  [isFilesResolved(f)](./cloud.http.isfilesresolved.md) |  |
|  [useFilesInfo(files)](./cloud.http.usefilesinfo.md) |  |
|  [useResolvedFiles(files)](./cloud.http.useresolvedfiles.md) |  |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [DestFiles](./cloud.http.destfiles.md) |  |
|  [FilesImageHandle](./cloud.http.filesimagehandle.md) |  |
|  [FilesImageResolved](./cloud.http.filesimageresolved.md) |  |
|  [FilesInfo](./cloud.http.filesinfo.md) |  |
|  [FilesLocal](./cloud.http.fileslocal.md) |  |
|  [HttpServerProps](./cloud.http.httpserverprops.md) |  |
|  [Location](./cloud.http.location.md) |  |
|  [MatchPath](./cloud.http.matchpath.md) |  |
|  [MatchRegex](./cloud.http.matchregex.md) |  |
|  [PathPair](./cloud.http.pathpair.md) |  |
|  [ResolvedRoute](./cloud.http.resolvedroute.md) |  |
|  [UrlRouterProps](./cloud.http.urlrouterprops.md) |  |
|  [UrlRouterRoute](./cloud.http.urlrouterroute.md) |  |
|  [VirtualServer](./cloud.http.virtualserver.md) |  |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [Destination](./cloud.http.destination.md) |  |
|  [Files](./cloud.http.files.md) |  |
|  [FilesResolved](./cloud.http.filesresolved.md) |  |
|  [Match](./cloud.http.match.md) |  |
